@@ -1118,6 +1118,7 @@ hildon_touch_selector_entry_set_text_column
 hildon_touch_selector_entry_get_text_column
 hildon_touch_selector_entry_set_input_mode
 hildon_touch_selector_entry_get_input_mode
+hildon_touch_selector_entry_get_entry
 <SUBSECTION Standard>
 HILDON_TOUCH_SELECTOR_ENTRY
 HILDON_IS_TOUCH_SELECTOR_ENTRY
