@@ -1,3 +1,13 @@
+2009-03-06  Claudio Saavedra  <csaavedra@igalia.com>
+
+	* doc/hildon-sections.txt:
+	* src/hildon-touch-selector-entry.c
+	(+hildon_touch_selector_entry_get_entry):
+	* src/hildon-touch-selector-entry.h: New accessor for the HildonEntry.
+
+	Fixes: NB#104815 (I need accessor to the entry inside
+	HildonTouchSelectorEntry)
+
 2009-03-06  Alberto Garcia  <agarcia@igalia.com>
 
 	* src/hildon-app-menu.c (hildon_app_menu_apply_style)
